Added js file and image to Images

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <h1>Hello world!</h1>
     <p>Welcome to my first website.</p>
     <img src="/Images/R1-04418-0012-2.jpg" alt="">
+
+<script src="/Js/main.js"></script>
+
   </body>
 </html>
