Start of html and Css
Cleaned up the boilerplate.
Wrote in html of nav and main img.
Started with Css on nav.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="/Css/style.css">
-    <title>My first website</title>
-  </head>
-  <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my first website.</p>
-    <img src="/Images/R1-04418-0012-2.jpg" alt="">
-
-<script src="/Js/main.js"></script>
-
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="Css/styles.css">
+  <title>My first website</title>
+</head>
+<body>
+<header>
+  <nav>
+    <ul>
+      <li><a href="#">Jackets</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">About</a></li>
+    </ul>
+  </nav>
+</header>
+<main>
+   <img src="/Images/joshua-earle-t6QYC3Zmis0-unsplash.jpg" alt="man with a red jacket standing very close to a waterfall on a small rock.">
+</main>
+</body>
 </html>
