Globals styles and change of image use
Updated global styles to also include box-sizing.  Changed to using background image in Css instead of img in the html as the image will have text laying on top of it.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="Css/styles.css">
-  <title>My first website</title>
+  <title>RainyDays Jackets</title>
 </head>
 <body>
-<header>
   <nav>
     <ul>
       <li><a href="#">Jackets</a></li>
@@ -16,9 +15,5 @@
       <li><a href="#">About</a></li>
     </ul>
   </nav>
-</header>
-<main>
-   <img src="/Images/joshua-earle-t6QYC3Zmis0-unsplash.jpg" alt="man with a red jacket standing very close to a waterfall on a small rock.">
-</main>
 </body>
 </html>
