Finished Nav bar, changed company text in center

--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 </head>
 <body>
   <nav>
+    <img src="/Images/RainyDays_Logo_NOSLOGAN.png" alt="RainyDays Logo" class="logo" >
     <ul>
       <li><a href="#">Jackets</a></li>
       <li><a href="#">Contact</a></li>
       <li><a href="#">About</a></li>
     </ul>
   </nav>
+  <img src="/Images/RainyDays logo text.png" alt="Rainy Days, Pushing the comfort zone" class="home__text">
+  <div home__social>
+    <i><a href="/Images/2959740_bird_news_tweet_twitter_icon-2.png"></a></i>
+    <!-- <a href="/Images/2959740_bird_news_tweet_twitter_icon-2.png" url ("/Images/2959740_bird_news_tweet_twitter_icon-2.png")>hi</a>
+    <a href="/Images/2959748_instagram_photo_share_icon.png"></a>
+    <a href="/Images/2959749_facebook_icon.png"></a> -->
+  </div>
 </body>
 </html>
