Restructured html and css
Several issues with flexbox, trying different things to solve it.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="Css/styles.css">
   <title>RainyDays Jackets</title>
 </head>
@@ -16,12 +17,17 @@
       <li><a href="#">About</a></li>
     </ul>
   </nav>
-  <img src="/Images/RainyDays logo text.png" alt="Rainy Days, Pushing the comfort zone" class="home__text">
-  <div home__social>
-    <i><a href="/Images/2959740_bird_news_tweet_twitter_icon-2.png"></a></i>
-    <!-- <a href="/Images/2959740_bird_news_tweet_twitter_icon-2.png" url ("/Images/2959740_bird_news_tweet_twitter_icon-2.png")>hi</a>
-    <a href="/Images/2959748_instagram_photo_share_icon.png"></a>
-    <a href="/Images/2959749_facebook_icon.png"></a> -->
-  </div>
+  <section class="home__main-container">
+    <div>
+      <img src="/Images/RainyDays logo text.png" alt="Rainy Days, Pushing the comfort zone" class="home__text">
+    </div>
+    <div>
+      <ul class="social-icons">
+        <li class="social-link"><i class="fab fa-twitter"></i></li>
+        <li class="social-link"><i class="fab fa-instagram"></i></li>
+        <li class="social-link"><i class="fab fa-facebook-f"></i></li>
+      </ul>
+    </div>
+  </section>
 </body>
 </html>
