--- a/index.html
+++ b/index.html
@@ -9,25 +9,37 @@
   <title>RainyDays Jackets</title>
 </head>
 <body>
-  <nav>
-    <img src="/Images/RainyDays_Logo_NOSLOGAN.png" alt="RainyDays Logo" class="logo" >
-    <ul>
-      <li><a href="#">Jackets</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">About</a></li>
-    </ul>
-  </nav>
-  <section class="home__main-container">
-    <div>
-      <img src="/Images/RainyDays logo text.png" alt="Rainy Days, Pushing the comfort zone" class="home__text">
+  <header>
+    <nav>
+    <div class="div1">
+      <a href="index.html"><img src="/Images/RainyDays_Logo_NOSLOGAN.png" alt="RainyDays Logo" class="logo" ></a>
     </div>
-    <div>
-      <ul class="social-icons">
-        <li class="social-link"><i class="fab fa-twitter"></i></li>
-        <li class="social-link"><i class="fab fa-instagram"></i></li>
-        <li class="social-link"><i class="fab fa-facebook-f"></i></li>
+    <div class="div2">
+      <ul class="navlinks">
+        <li><a href="#">Jackets</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">About</a></li>
       </ul>
     </div>
-  </section>
+    <div class="div3">
+      <label class="hamburger-label" for="hamburger-menu"><i class="fas fa-bars"></i></label>
+    <input type="checkbox" id="hamburger-menu">
+    </div>
+    </nav>
+  </header>
+  <main>
+    <section class="home__main-container">
+      <div class="div21">
+        <img src="/Images/RainyDays logo text.png" alt="Rainy Days, Pushing the comfort zone" class="home__text">
+      </div>
+      <div class="div22">
+        <ul class="social-icons">
+          <li class="social-link"><i class="fab fa-twitter"></i></li>
+          <li class="social-link"><i class="fab fa-instagram"></i></li>
+          <li class="social-link"><i class="fab fa-facebook-f"></i></li>
+        </ul>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
