More tweaking to get resizing to work properly

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 </head>
 <body>
   <header>
-    <nav>
-    <div class="div1">
+    <nav class="dividend">
+    <div class="text-left">
       <a href="index.html"><img src="/Images/RainyDays_Logo_NOSLOGAN.png" alt="RainyDays Logo" class="logo" ></a>
     </div>
-    <div class="div2">
+    <div>
       <ul class="navlinks">
         <li><a href="#">Jackets</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">About</a></li>
       </ul>
     </div>
-    <div class="div3">
+    <div>
       <label class="hamburger-label" for="hamburger-menu"><i class="fas fa-bars"></i></label>
     <input type="checkbox" id="hamburger-menu">
     </div>
@@ -29,10 +29,10 @@
   </header>
   <main>
     <section class="home__main-container">
-      <div class="div21">
+      <div class="text-left">
         <img src="/Images/RainyDays logo text.png" alt="Rainy Days, Pushing the comfort zone" class="home__text">
       </div>
-      <div class="div22">
+      <div class="social-right">
         <ul class="social-icons">
           <li class="social-link"><i class="fab fa-twitter"></i></li>
           <li class="social-link"><i class="fab fa-instagram"></i></li>
