--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="RainyDays jackets have come to be the go to rain jacket for all outdoors adventures, with it's reliable protection and durability against the elements">
   <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="Css/styles.css">
   <title>RainyDays Jackets</title>
@@ -11,20 +12,20 @@
 <body>
   <header>
     <nav class="dividend">
-    <div class="text-left">
-      <a href="index.html"><img src="/Images/RainyDays_Logo_NOSLOGAN.png" alt="RainyDays Logo" class="logo" ></a>
-    </div>
-    <div>
-      <ul class="navlinks">
-        <li><a href="#">Jackets</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">About</a></li>
-      </ul>
-    </div>
-    <div>
-      <label class="hamburger-label" for="hamburger-menu"><i class="fas fa-bars"></i></label>
-    <input type="checkbox" id="hamburger-menu">
-    </div>
+      <div class="text-left">
+        <a href="index.html"><img src="/Images/RainyDays_Logo_NOSLOGAN.png" alt="RainyDays Logo" class="logo" ></a>
+      </div>
+      <div>
+        <ul class="navlinks">
+          <li><a href="#">Jackets</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+      </div>
+      <div>
+        <label class="hamburger-label" for="hamburger-menu"><i class="fas fa-bars"></i></label>
+      <input type="checkbox" id="hamburger-menu">
+      </div>
     </nav>
   </header>
   <main>
