--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="RainyDays jackets have come to be the go to rain jacket for all outdoors adventures, with it's reliable protection and durability against the elements">
   <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
   <link rel="stylesheet" href="Css/styles.css">
   <title>RainyDays Jackets</title>
 </head>
@@ -13,25 +14,23 @@
   <header>
     <nav class="dividend">
       <div class="text-left">
-        <a href="index.html"><img src="/Images/RainyDays_Logo_NOSLOGAN.png" alt="RainyDays Logo" class="logo" ></a>
+        <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo" ></a>
       </div>
       <div>
+        <label class="hamburger-label" for="hamburger-menu"><i class="fas fa-bars"></i></label>
+        <input type="checkbox" id="hamburger-menu">
         <ul class="navlinks">
           <li><a href="#">Jackets</a></li>
           <li><a href="#">Contact</a></li>
           <li><a href="#">About</a></li>
         </ul>
       </div>
-      <div>
-        <label class="hamburger-label" for="hamburger-menu"><i class="fas fa-bars"></i></label>
-      <input type="checkbox" id="hamburger-menu">
-      </div>
     </nav>
   </header>
   <main>
     <section class="home__main-container">
       <div class="text-left">
-        <img src="/Images/RainyDays logo text.png" alt="Rainy Days, Pushing the comfort zone" class="home__text">
+        <img src="/images/rainydays_logo_text.png" alt="Rainy Days, Pushing the comfort zone" class="home__text">
       </div>
       <div class="social-right">
         <ul class="social-icons">
