--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <label class="hamburger-label" for="hamburger-menu"><i class="fas fa-bars"></i></label>
         <input type="checkbox" id="hamburger-menu">
         <ul class="navlinks">
-          <li><a href="#">Jackets</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#">Shop</a></li>
           <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -34,6 +34,7 @@
       </div>
       <div class="social-right">
         <ul class="social-icons">
+          <li class="social-link"><i class="fas fa-search"></i></li>
           <li class="social-link"><i class="fab fa-twitter"></i></li>
           <li class="social-link"><i class="fab fa-instagram"></i></li>
           <li class="social-link"><i class="fab fa-facebook-f"></i></li>
