--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <section class="home__main-container">
       <div class="text-left">
         <img src="/images/rainydays_logo_text.png" alt="Rainy Days, Pushing the comfort zone" class="home__text">
+        <a href="#" class="cta__home">Our Jackets</a>
       </div>
       <div class="social-right">
         <ul class="social-icons">
