--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
   <header>
     <nav class="dividend">
-      <div class="text-left">
-        <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo" ></a>
+      <div>
+        <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
       </div>
       <div>
-        <label class="hamburger-label" for="hamburger-menu"><i class="fas fa-bars"></i></label>
-        <input type="checkbox" id="hamburger-menu">
+        <label class="hamburger-label" for="check"><i class="fas fa-bars"></i></label>
+        <input type="checkbox" id="check">
         <ul class="navlinks">
           <li><a href="#">Shop</a></li>
           <li><a href="#">About</a></li>
