Still fixing home page, building second
Trying to fix hamburger menu. Found a webkit-blur copy and removed it. Started building html on Jackets page

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
   <link rel="stylesheet" href="Css/styles.css">
-  <title>RainyDays Jackets</title>
+  <title>RainyDays Home</title>
 </head>
-<body>
-  <header>
-    <nav class="dividend">
+<body class="body__home"> 
+  <header class="header__home">
+    <nav class="nav__home">
       <div>
         <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
       </div>
