--- a/jackets.html
+++ b/jackets.html
@@ -12,13 +12,16 @@
 </head>
 <body class="body__jackets">
   <header class="header__jackets">
-    <nav class="">
+    <nav class="nav__jackets">
       <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
       <span class="pagetitle__jackets">Jackets</span>
-      <a href="#"><i class="fas fa-search"></i></a>
-      <a href="#"><i class="fas fa-shopping-bag"></i></a>
-      <a href="#"><i class="fas fa-bars"></i></a>
+      <a href="#" class="nav__symbols"><i class="fas fa-search"></i></a>
+      <a href="#" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
+      <a href="#" class="nav__symbols"><i class="fas fa-bars"></i></a>
     </nav>
   </header>
+  <main>
+    
+  </main>
 </body>
 </html>
