Added background, adjusted nav

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <nav class="nav__home">
       <div>
         <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
+        
       </div>
       <div>
         <label class="hamburger-label" for="check"><i class="fas fa-bars"></i></label>
@@ -42,6 +43,8 @@
         </ul>
       </div>
     </section>
+    <p class="licence">Photo by <a href="https://unsplash.com/@joshuaearle?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Joshua Earle</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+    </p>
   </main>
 </body>
 </html>
