background color update

--- a/jackets.html
+++ b/jackets.html
@@ -21,7 +21,16 @@
     </nav>
   </header>
   <main>
-    
+    <div class="grid-container">
+      <img src="/images/photos/1.png" alt="">
+      <img src="/images/photos/2.png" alt="">
+      <img src="/images/photos/3.png" alt="">
+      <img src="/images/photos/4.png" alt="">
+      <img src="/images/photos/5.png" alt="">
+      <img src="/images/photos/6.png" alt="">
+      <img src="/images/photos/7.png" alt="">
+      <img src="/images/photos/8.png" alt="">
+    </div>
   </main>
 </body>
 </html>
