added images and set up grid
Made hexagon images in PS. Dropped them in images folder. Set up a grid area for the images. Adjusted nav so main text aligned with images.

--- a/jackets.html
+++ b/jackets.html
@@ -13,23 +13,23 @@
 <body class="body__jackets">
   <header class="header__jackets">
     <nav class="nav__jackets">
-      <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
+      <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo logo"></a>
       <span class="pagetitle__jackets">Jackets</span>
       <a href="#" class="nav__symbols"><i class="fas fa-search"></i></a>
       <a href="#" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
       <a href="#" class="nav__symbols"><i class="fas fa-bars"></i></a>
     </nav>
   </header>
-  <main>
-    <div class="grid-container">
-      <img src="/images/photos/1.png" alt="">
-      <img src="/images/photos/2.png" alt="">
-      <img src="/images/photos/3.png" alt="">
-      <img src="/images/photos/4.png" alt="">
-      <img src="/images/photos/5.png" alt="">
-      <img src="/images/photos/6.png" alt="">
-      <img src="/images/photos/7.png" alt="">
-      <img src="/images/photos/8.png" alt="">
+  <main class="main__jackets">
+    <div class="grid-container__jackets">
+      <img class="hex-img-large__jackets item1" src="/images/photos/1.png" alt="">
+      <img class="hex-img-small__jackets item2" src="/images/photos/2.png" alt="">
+      <img class="hex-img-small__jackets item3" src="/images/photos/3.png" alt="">
+      <img class="hex-img-large__jackets item4" src="/images/photos/4.png" alt="">
+      <img class="hex-img-large__jackets item5" src="/images/photos/5.png" alt="">
+      <img class="hex-img-small__jackets item6" src="/images/photos/6.png" alt="">
+      <img class="hex-img-small__jackets item7" src="/images/photos/7.png" alt="">
+      <img class="hex-img-large__jackets item8" src="/images/photos/8.png" alt="">
     </div>
   </main>
 </body>
