added discount tag and adjusted hex images

--- a/jackets.html
+++ b/jackets.html
@@ -31,6 +31,7 @@
       <img class="hex-img-small__jackets item7" src="/images/photos/7.png" alt="">
       <img class="hex-img-large__jackets item8" src="/images/photos/8.png" alt="">
     </div>
+    <p class="discount-tag">%</p>
   </main>
 </body>
 </html>
