--- a/product.html
+++ b/product.html
@@ -23,8 +23,7 @@
   <main class="product__main">
     <img src="/images/pexels-monicore-134068.jpg" alt="" class="background__img">
     <img src="/images/icons/Inserts.png" alt="inserts" class="inserts__product">
-    <a href="#"><img src="/images/icons/button__product.png" alt="" class="button__product">
-    </a>
+    <a href="#" class="button__product"><i class="fas fa-shopping-bag">Add to bag</i></a>
   </main>
 </body>
 </html>
