fixed button issue
button text was inside <i> instead of <a> which caused inheriting problems

--- a/product.html
+++ b/product.html
@@ -8,7 +8,7 @@
   <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
   <link rel="stylesheet" href="Css/styles.css">
-  <title>Document</title>
+  <title>CALDERON JACKET</title>
 </head>
 <body class="body__jackets">
   <header class="header__jackets">
@@ -23,7 +23,7 @@
   <main class="product__main">
     <img src="/images/pexels-monicore-134068.jpg" alt="" class="background__img">
     <img src="/images/icons/Inserts.png" alt="inserts" class="inserts__product">
-    <a href="#" class="button__product"><i class="fas fa-shopping-bag">Add to bag</i></a>
+    <a href="#" class="button__product"><i class="fas fa-shopping-bag"></i>Add to bag</a>
   </main>
 </body>
 </html>
