--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
     <nav class="nav__home">
       <div>
         <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
-        
       </div>
       <div>
         <label class="hamburger-label" for="check"><i class="fas fa-bars"></i></label>
         <input type="checkbox" id="check">
         <ul class="navlinks">
-          <li><a href="#">Shop</a></li>
+          <li><a href="/product.html">Shop</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
