Tried to fix nav position and tried to fix product page grid area problem

--- a/jackets.html
+++ b/jackets.html
@@ -22,7 +22,7 @@
   </header>
   <main class="main__jackets">
     <div class="grid-container__jackets">
-      <img class="hex-img-large__jackets item1" src="/images/photos/1.png" alt="">
+      <a href=""><img class="hex-img-large__jackets item1" src="/images/photos/1.png" alt=""></a>
       <img class="hex-img-small__jackets item2" src="/images/photos/2.png" alt="">
       <img class="hex-img-small__jackets item3" src="/images/photos/3.png" alt="">
       <img class="hex-img-large__jackets item4" src="/images/photos/4.png" alt="">
@@ -31,7 +31,9 @@
       <img class="hex-img-small__jackets item7" src="/images/photos/7.png" alt="">
       <img class="hex-img-large__jackets item8" src="/images/photos/8.png" alt="">
     </div>
-    <p class="discount-tag">%</p>
+    <div>
+      <span class="discount-tag">%</span>
+    </div>
   </main>
 </body>
 </html>
