--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <label class="hamburger-label" for="check"><i class="fas fa-bars"></i></label>
         <input type="checkbox" id="check">
         <ul class="navlinks">
-          <li><a href="/product.html">Shop</a></li>
+          <li><a href="jackets.html">Shop</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
