messing things up

--- a/jackets.html
+++ b/jackets.html
@@ -31,8 +31,8 @@
       <img class="hex-img-small__jackets item7" src="/images/photos/7.png" alt="">
       <img class="hex-img-large__jackets item8" src="/images/photos/8.png" alt="">
     </div>
-    <div>
-      <span class="discount-tag">%</span>
+    <div class="discount-tag">
+      <span>%</span>
     </div>
   </main>
 </body>
