--- a/product.html
+++ b/product.html
@@ -22,9 +22,9 @@
   </header>
   <main class="product__main">
     <img src="/images/pexels-monicore-134068.jpg" alt="" class="background__img">
-    <div inserts__container>
-      <img src="/images/icons/Inserts.png" alt="inserts" class="inserts__product">
-      <a href="#" class="button__product"><i class="fas fa-shopping-bag"></i>Add to bag</a>
+    <div class="inserts__container">
+        <img src="/images/icons/Inserts.png" alt="inserts" class="inserts__product">
+        <a href="#" class="button__product"><i class="fas fa-shopping-bag"></i>Add to bag</a>
     </div>
   </main>
 </body>
