fixed drop shadow on jackets page. Started building Checkout page

--- a/jackets.html
+++ b/jackets.html
@@ -12,9 +12,10 @@
 </head>
 <body class="body__jackets">
   <header class="header__jackets">
+    <h1>Jackets</h1>
     <nav class="nav__jackets">
       <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo logo"></a>
-      <span class="pagetitle__jackets">Jackets</span>
+      <!-- <span class="pagetitle__jackets">Jackets</span> -->
       <a href="#" class="nav__symbols"><i class="fas fa-search"></i></a>
       <a href="#" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
       <a href="#" class="nav__symbols"><i class="fas fa-bars"></i></a>
@@ -22,14 +23,14 @@
   </header>
   <main class="main__jackets">
     <div class="grid-container__jackets">
-      <a href=""><img class="hex-img-large__jackets item1" src="/images/photos/1.png" alt=""></a>
-      <img class="hex-img-small__jackets item2" src="/images/photos/2.png" alt="">
-      <img class="hex-img-small__jackets item3" src="/images/photos/3.png" alt="">
-      <img class="hex-img-large__jackets item4" src="/images/photos/4.png" alt="">
-      <img class="hex-img-large__jackets item5" src="/images/photos/5.png" alt="">
-      <img class="hex-img-small__jackets item6" src="/images/photos/6.png" alt="">
-      <img class="hex-img-small__jackets item7" src="/images/photos/7.png" alt="">
-      <img class="hex-img-large__jackets item8" src="/images/photos/8.png" alt="">
+      <a href="" class="hex-img__jackets"><img class="hex-img-large__jackets item1" src="/images/photos/1.png" alt=""></a>
+      <img class="hex-img-small__jackets item2 hex-img__jackets" src="/images/photos/2.png" alt="">
+      <img class="hex-img-small__jackets item3 hex-img__jackets" src="/images/photos/3.png" alt="">
+      <img class="hex-img-large__jackets item4 hex-img__jackets" src="/images/photos/4.png" alt="">
+      <img class="hex-img-large__jackets item5 hex-img__jackets" src="/images/photos/5.png" alt="">
+      <img class="hex-img-small__jackets item6 hex-img__jackets" src="/images/photos/6.png" alt="">
+      <img class="hex-img-small__jackets item7 hex-img__jackets" src="/images/photos/7.png" alt="">
+      <img class="hex-img-large__jackets item8 hex-img__jackets" src="/images/photos/8.png" alt="">
     </div>
     <div class="discount-tag">
       <span>%</span>
