--- a/checkout.html
+++ b/checkout.html
@@ -24,8 +24,8 @@
   <main>
     <section class="checkout__container">
       <div class="images__checkout">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img src="/images/photos/2.png" alt="" class="checkout__img">
+        <img src="/images/photos/6.png" alt="" class="checkout__img">
       </div>
       <div class="total__checkout">
         <span></span>
@@ -36,7 +36,7 @@
     </section>
     <section class="progressbar__checkout">
       <a href=""></a>
-      
+      <a href=""></a>
       <a href=""></a>
     </section>
   </main>
