building checkout page. made progressbar

--- a/checkout.html
+++ b/checkout.html
@@ -24,20 +24,24 @@
   <main>
     <section class="checkout__container">
       <div class="images__checkout">
-        <img src="/images/photos/2.png" alt="" class="checkout__img">
-        <img src="/images/photos/6.png" alt="" class="checkout__img">
+        <img src="/images/photos/2.png" alt="" class="hex-img checkout__img">
+        <img src="/images/photos/6.png" alt="" class="hex-img checkout__img">
       </div>
-      <div class="total__checkout">
-        <span></span>
-        <img src="" alt="">
-        <span></span>
+      <div class="total__checkout images__checkout">
+        <h2 class="total-text">Total</h2>
+        <img src="/images/icons/3324949_bag_shopping_icon_150.png" alt="" class="shopping-bag">
+        <h2 class="total-text">$ 585</h2>
       </div>
-      <a href="#" class="button__checkout"></a>
+      <div class="button-checkout__container">
+        <a href="#" class="button__checkout">Continue</a>
+      </div>
     </section>
     <section class="progressbar__checkout">
-      <a href=""></a>
-      <a href=""></a>
-      <a href=""></a>
+      <div class="circle"><div class="circle2"></div></div>
+      <div class="line"></div>
+      <div class="circle"><div class="circle2"></div></div>
+      <div class="line"></div>
+      <div class="circle"><div class="circle2"></div></div>
     </section>
   </main>
   <footer>
