--- a/jackets.html
+++ b/jackets.html
@@ -23,14 +23,14 @@
   </header>
   <main class="main__jackets">
     <div class="grid-container__jackets">
-      <a href="" class="hex-img__jackets"><img class="hex-img-large__jackets item1" src="/images/photos/1.png" alt=""></a>
-      <img class="hex-img-small__jackets item2 hex-img__jackets" src="/images/photos/2.png" alt="">
-      <img class="hex-img-small__jackets item3 hex-img__jackets" src="/images/photos/3.png" alt="">
-      <img class="hex-img-large__jackets item4 hex-img__jackets" src="/images/photos/4.png" alt="">
-      <img class="hex-img-large__jackets item5 hex-img__jackets" src="/images/photos/5.png" alt="">
-      <img class="hex-img-small__jackets item6 hex-img__jackets" src="/images/photos/6.png" alt="">
-      <img class="hex-img-small__jackets item7 hex-img__jackets" src="/images/photos/7.png" alt="">
-      <img class="hex-img-large__jackets item8 hex-img__jackets" src="/images/photos/8.png" alt="">
+      <a href="" class="hex-img"><img class="hex-img-large__jackets item1" src="/images/photos/1.png" alt=""></a>
+      <img class="hex-img-small__jackets item2 hex-img" src="/images/photos/2.png" alt="">
+      <img class="hex-img-small__jackets item3 hex-img" src="/images/photos/3.png" alt="">
+      <img class="hex-img-large__jackets item4 hex-img" src="/images/photos/4.png" alt="">
+      <img class="hex-img-large__jackets item5 hex-img" src="/images/photos/5.png" alt="">
+      <img class="hex-img-small__jackets item6 hex-img" src="/images/photos/6.png" alt="">
+      <img class="hex-img-small__jackets item7 hex-img" src="/images/photos/7.png" alt="">
+      <img class="hex-img-large__jackets item8 hex-img" src="/images/photos/8.png" alt="">
     </div>
     <div class="discount-tag">
       <span>%</span>
