Tried to fix progress bar

--- a/checkout.html
+++ b/checkout.html
@@ -37,12 +37,28 @@
       </div>
     </section>
     <section class="progressbar__checkout">
-      <div class="circle"><div class="circle2"></div></div>
+      <div class="circle-container">
+        <div class="circle">
+          <div class="circle2"></div>
+        </div>
+        <span class="progressbar-tags">Items</span>
+      </div>
       <div class="line"></div>
-      <div class="circle"><div class="circle2"></div></div>
+      <div class="circle-container">
+        <div class="circle">
+          <div class="circle2"></div>
+        </div>
+        <span class="progressbar-tags">Details</span>
+      </div>
       <div class="line"></div>
-      <div class="circle"><div class="circle2"></div></div>
+      <div class="circle-container">
+        <div class="circle">
+          <div class="circle2"></div>
+        </div>
+        <span class="progressbar-tags">Payment</span>
+      </div>
     </section>
+   
   </main>
   <footer>
 
