Started to build About page

--- a/about.html
+++ b/about.html
@@ -21,23 +21,29 @@
       <a href="#" class="nav__symbols"><i class="fas fa-bars"></i></a>
     </nav>
   </header>
-  <main>
-   <section>
-    <p>No matter the weather...</p>
-    <p>Our jackets</p>
-    <p>will pull</p>
-    <p>you through</p>
-   </section>
-   <section>
-     <div>
-       <img src="" alt="">
-     </div>
-     <div>
-       <img src="" alt="">
-       <p>From the beginning, the brand committed to serving all those who desired to explore and to serving our natural wild lands by helping to conserve them. At our core, we believe exploration creates an indelible bond with the outdoors, inspiring people to protect our land and pass these beliefs down to the next generation.</p>
-       <p>Soon thereafter, that little shop became known as RainyDays, a retailer of performance all-weather rain jackets. In1995, RainyDays moved to the other side of Humphrey Bay, to the unbridled possibilities of the Riverland area, and began designing and manufacturing its own brand of rugged rain wear jackets. The rest is as they say, history…</p>
-     </div>
-   </section>
-  </main>
+  <div class="background image-1"></div>
+  <div class="background image-2"></div>
+  <div class="background image-3"></div>
+  <div class="text__about top-text__about">No matter the weather...</div>
+  <div><a href="#"><i class="fas fa-chevron-down arrow"></i></a></div>
+  <div class="text__about bottom-text__about">
+    <p>
+      Our jackets
+    </p>
+  </div>
+  <div class="text__about bottom-text__about">
+    <p>
+      Will pull
+    </p>
+  </div>
+  <div class="text__about bottom-text__about">
+    <p>
+      You through
+    </p>
+  </div>
+  <div>
+    <p>From the beginning, the brand committed to serving all those who desired to explore and to serving our natural wild lands by helping to conserve them. At our core, we believe exploration creates an indelible bond with the outdoors, inspiring people to protect our land and pass these beliefs down to the next generation.</p>
+    <p>Soon thereafter, that little shop became known as RainyDays, a retailer of performance all-weather rain jackets. In1995, RainyDays moved to the other side of Humphrey Bay, to the unbridled possibilities of the Riverland area, and began designing and manufacturing its own brand of rugged rain wear jackets. The rest is as they say, history…</p>
+  </div>
 </body>
 </html>
