finishing building About page

--- a/about.html
+++ b/about.html
@@ -11,39 +11,55 @@
   <title>RainyDays - About Us</title>
 </head>
 <body class="body__about">
-  <header>
+  <header class="header-about">
     <h1>About Us</h1>
     <nav class="nav__jackets">
-      <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo logo"></a>
+      <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
       <!-- <span class="pagetitle__jackets">Calderon</span> -->
       <a href="#" class="nav__symbols"><i class="fas fa-search"></i></a>
       <a href="#" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
       <a href="#" class="nav__symbols"><i class="fas fa-bars"></i></a>
     </nav>
   </header>
-  <div class="background image-1"></div>
-  <div class="background image-2"></div>
-  <div class="background image-3"></div>
-  <div class="text__about top-text__about">No matter the weather...</div>
-  <div><a href="#"><i class="fas fa-chevron-down arrow"></i></a></div>
-  <div class="text__about bottom-text__about">
-    <p>
-      Our jackets
-    </p>
-  </div>
-  <div class="text__about bottom-text__about">
-    <p>
-      Will pull
-    </p>
-  </div>
-  <div class="text__about bottom-text__about">
-    <p>
-      You through
-    </p>
-  </div>
-  <div>
-    <p>From the beginning, the brand committed to serving all those who desired to explore and to serving our natural wild lands by helping to conserve them. At our core, we believe exploration creates an indelible bond with the outdoors, inspiring people to protect our land and pass these beliefs down to the next generation.</p>
-    <p>Soon thereafter, that little shop became known as RainyDays, a retailer of performance all-weather rain jackets. In1995, RainyDays moved to the other side of Humphrey Bay, to the unbridled possibilities of the Riverland area, and began designing and manufacturing its own brand of rugged rain wear jackets. The rest is as they say, history…</p>
-  </div>
+  <main>
+    <section class="top-section">
+      <img src="/images/photos/tim-jones-NQjvaCYp0h4-unsplash.jpg" alt="" class="background-about">
+      <div class="text__about top-text__about">
+        <p>
+          No matter the weather...
+        </p>
+      </div>
+      <div><a href="#"><i class="fas fa-chevron-down arrow"></i></a></div>
+      <div class="text__about bottom-text__about">
+        <p>
+          Our jackets
+        </p>
+      </div>
+      <div class="text__about bottom-text__about">
+        <p>
+          Will pull
+        </p>
+      </div>
+      <div class="text__about bottom-text__about">
+        <p>
+          You through
+        </p>
+      </div>
+    </section>
+    <section class="about-grid">
+      <div class="about-grid-item">
+        <img src="/images/photos/blake-cheek-dw96lVwMXJg-unsplash.jpg" alt="" class="image-left">
+      </div>
+      <div class="about-grid-item">
+        <img src="/images/photos/nina-luong-dy4QG5c5xWQ-unsplash.jpg" alt="" class="image-right">
+      </div>
+      <div class="about-grid-item about-grid-item-text1">
+        <p>From the beginning, the brand committed to serving all those who desired to explore and to serving our natural wild lands by helping to conserve them. At our core, we believe exploration creates an indelible bond with the outdoors, inspiring people to protect our land and pass these beliefs down to the next generation.</p>
+      </div>
+      <div class="about-grid-item grid-col-span-2 about-grid-item-text2">
+        <p>Soon thereafter, that little shop became known as RainyDays, a retailer of performance all-weather rain jackets. In1995, RainyDays moved to the other side of Humphrey Bay, to the unbridled possibilities of the Riverland area, and began designing and manufacturing its own brand of rugged rain wear jackets. The rest is as they say, history…</p>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
