trying to fix About page and grid

--- a/about.html
+++ b/about.html
@@ -26,21 +26,21 @@
       <img src="/images/photos/tim-jones-NQjvaCYp0h4-unsplash.jpg" alt="" class="background-about">
       <div class="text__about top-text__about">
         <p>
-          No matter the weather...
+          No matter the weather
         </p>
       </div>
       <div><a href="#"><i class="fas fa-chevron-down arrow"></i></a></div>
-      <div class="text__about bottom-text__about">
+      <div class="text__about bottom-text__about1">
         <p>
           Our jackets
         </p>
       </div>
-      <div class="text__about bottom-text__about">
+      <div class="text__about bottom-text__about2">
         <p>
           Will pull
         </p>
       </div>
-      <div class="text__about bottom-text__about">
+      <div class="text__about bottom-text__about3">
         <p>
           You through
         </p>
