--- a/checkout.html
+++ b/checkout.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="RainyDays jackets have come to be the go to rain jacket for all outdoors adventures, with it's reliable protection and durability against the elements">
+  <meta name="description" content=" Welcome to the Official RainyDays Online Store. Shop RainyDays Jackets for skiing, canooing, biking, trekking and all other Outddoor activities. ">
   <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
   <link rel="stylesheet" href="Css/styles.css">
-  <title>Checkout</title>
+  <title>RainyDays|Checkout page</title>
 </head>
 <body class="body__jackets">
   <header class="header__jackets">
@@ -57,10 +57,6 @@
         <span class="progressbar-tags">Payment</span>
       </div>
     </section>
-   
   </main>
-  <footer>
-
-  </footer>
 </body>
 </html>
