--- a/jackets.html
+++ b/jackets.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="RainyDays jackets have come to be the go to rain jacket for all outdoors adventures, with it's reliable protection and durability against the elements">
+  <meta name="description" content=" Discover the Unisex Line of RainyDays Rain Jackets. They will keep your comfortzone closer to the elements. We have fast shipping and well renouned customer service. ">
   <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
   <link rel="stylesheet" href="Css/styles.css">
-  <title>RainyDays Jackets</title>
+  <title>RainyDays|All Jackets</title>
 </head>
 <body class="body__jackets">
   <header class="header__jackets">
