--- a/product.html
+++ b/product.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="RainyDays jackets have come to be the go to rain jacket for all outdoors adventures, with it's reliable protection and durability against the elements">
+  <meta name="description" content=" The Calderon Rain Jacket is a design for active usage through differing temperatures making a versatile package as the outer shell, as well as with the zip out fleece, is wearable on its own.">
   <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
   <link rel="stylesheet" href="Css/styles.css">
-  <title>CALDERON JACKET</title>
+  <title>Calderon Jacket|RainyDays</title>
 </head>
 <body class="body__jackets">
   <header class="header__jackets">
+    <h1>Calderon Jacket</h1>
     <nav class="nav__jackets">
       <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo logo"></a>
-      <span class="pagetitle__jackets">Calderon</span>
       <a href="#" class="nav__symbols"><i class="fas fa-search"></i></a>
       <a href="#" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
       <a href="#" class="nav__symbols"><i class="fas fa-bars"></i></a>
