--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <input type="checkbox" id="check">
         <ul class="navlinks">
           <li><a href="jackets.html">Shop</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
@@ -31,7 +31,7 @@
     <section class="home__main-container">
       <div class="text-left">
         <img src="/images/rainydays_logo_text.png" alt="Rainy Days, Pushing the comfort zone" class="home__text">
-        <a href="#" class="cta__home">Our Jackets</a>
+        <a href="jackets.html" class="cta__home">Our Jackets</a>
       </div>
       <div class="social-right">
         <ul class="social-icons">
