--- a/jackets.html
+++ b/jackets.html
@@ -17,20 +17,20 @@
       <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo logo"></a>
       <!-- <span class="pagetitle__jackets">Jackets</span> -->
       <a href="#" class="nav__symbols"><i class="fas fa-search"></i></a>
-      <a href="#" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
+      <a href="checkout.html" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
       <a href="#" class="nav__symbols"><i class="fas fa-bars"></i></a>
     </nav>
   </header>
   <main class="main__jackets">
     <div class="grid-container__jackets">
-      <a href="" class="hex-img"><img class="hex-img-large__jackets item1" src="/images/photos/1.png" alt=""></a>
-      <img class="hex-img-small__jackets item2 hex-img" src="/images/photos/2.png" alt="">
-      <img class="hex-img-small__jackets item3 hex-img" src="/images/photos/3.png" alt="">
-      <img class="hex-img-large__jackets item4 hex-img" src="/images/photos/4.png" alt="">
-      <img class="hex-img-large__jackets item5 hex-img" src="/images/photos/5.png" alt="">
-      <img class="hex-img-small__jackets item6 hex-img" src="/images/photos/6.png" alt="">
-      <img class="hex-img-small__jackets item7 hex-img" src="/images/photos/7.png" alt="">
-      <img class="hex-img-large__jackets item8 hex-img" src="/images/photos/8.png" alt="">
+      <a href="product.html"><img class="hex-img-large__jackets item1 hex-img" src="/images/photos/1.png" alt=""></a>
+      <a href="product.html"><img class="hex-img-small__jackets item2 hex-img" src="/images/photos/2.png" alt=""></a>
+      <a href="product.html"><img class="hex-img-small__jackets item3 hex-img" src="/images/photos/3.png" alt=""></a>
+      <a href="product.html"><img class="hex-img-large__jackets item4 hex-img" src="/images/photos/4.png" alt=""></a>
+      <a href="product.html"><img class="hex-img-large__jackets item5 hex-img" src="/images/photos/5.png" alt=""></a>
+      <a href="product.html"><img class="hex-img-small__jackets item6 hex-img" src="/images/photos/6.png" alt=""></a>
+      <a href="product.html"><img class="hex-img-small__jackets item7 hex-img" src="/images/photos/7.png" alt=""></a>
+      <a href="product.html"><img class="hex-img-large__jackets item8 hex-img" src="/images/photos/8.png" alt=""></a>
     </div>
     <div class="discount-tag">
       <span>%</span>
