--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body class="body__about">
   <header class="header-about">
     <h1>About Us</h1>
-    <nav class="nav__jackets">
+    <nav class="nav__all">
       <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
       <!-- <span class="pagetitle__jackets">Calderon</span> -->
       <a href="#" class="nav__symbols"><i class="fas fa-search"></i></a>
