--- a/checkout.html
+++ b/checkout.html
@@ -1,62 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content=" Welcome to the Official RainyDays Online Store. Shop RainyDays Jackets for skiing, canooing, biking, trekking and all other Outddoor activities. ">
-  <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
-  <link rel="stylesheet" href="Css/styles.css">
-  <title>RainyDays|Checkout page</title>
-</head>
-<body class="body__jackets">
-  <header class="header__jackets">
-    <h1>Checkout</h1>
-    <nav class="nav__jackets">
-      <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo logo"></a>
-      <a href="#" class="nav__symbols"><i class="fas fa-search"></i></a>
-      <a href="#" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
-      <a href="#" class="nav__symbols"><i class="fas fa-bars"></i></a>
-    </nav>
-  </header>
-  <main>
-    <section class="checkout__container">
-      <div class="images__checkout">
-        <img src="/images/photos/2.png" alt="" class="hex-img checkout__img">
-        <img src="/images/photos/6.png" alt="" class="hex-img checkout__img">
-      </div>
-      <div class="total__checkout images__checkout">
-        <h2 class="total-text">Total</h2>
-        <img src="/images/icons/3324949_bag_shopping_icon_150.png" alt="" class="shopping-bag">
-        <h2 class="total-text">$ 585</h2>
-      </div>
-      <div class="button-checkout__container">
-        <a href="#" class="button__checkout">Continue</a>
-      </div>
-    </section>
-    <section class="progressbar__checkout">
-      <div class="circle-container">
-        <div class="circle">
-          <div class="circle2"></div>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content=" Welcome to the Official RainyDays Online Store. Shop RainyDays Jackets for skiing, canooing, biking, trekking and all other Outddoor activities. ">
+    <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
+    <link rel="stylesheet" href="Css/styles.css">
+    <title>RainyDays|Checkout page</title>
+  </head>
+  <body class="body__jackets">
+    <header class="header__jackets">
+      <h1>Checkout</h1>
+      <nav class="nav__all">
+        <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo logo"></a>
+        <a href="#" class="nav__symbols"><i class="fas fa-search"></i></a>
+        <a href="#" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
+        <a href="#" class="nav__symbols"><i class="fas fa-bars"></i></a>
+      </nav>
+    </header>
+    <main>
+      <section class="checkout__container">
+        <div class="images__checkout">
+          <img src="/images/photos/2.png" alt="" class="hex-img checkout__img">
+          <img src="/images/photos/6.png" alt="" class="hex-img checkout__img">
         </div>
-        <span class="progressbar-tags">Items</span>
-      </div>
-      <div class="line"></div>
-      <div class="circle-container">
-        <div class="circle">
-          <div class="circle2"></div>
+        <div class="total__checkout images__checkout">
+          <h2>Total</h2>
+          <img src="/images/icons/3324949_bag_shopping_icon_150.png" alt="" class="shopping-bag">
+          <h2>$ 585</h2>
         </div>
-        <span class="progressbar-tags">Details</span>
-      </div>
-      <div class="line"></div>
-      <div class="circle-container">
-        <div class="circle">
-          <div class="circle2"></div>
+        <div class="button-checkout__container">
+          <a href="#" class="button__checkout">Continue</a>
         </div>
-        <span class="progressbar-tags">Payment</span>
-      </div>
-    </section>
-  </main>
-</body>
+      </section>
+      <section class="progressbar__checkout">
+        <div class="circle-container">
+          <div class="circle">
+            <div class="circle2"></div>
+          </div>
+          <span class="progressbar-tags">Items</span>
+        </div>
+        <div class="line"></div>
+        <div class="circle-container">
+          <div class="circle">
+            <div class="circle2"></div>
+          </div>
+          <span class="progressbar-tags">Details</span>
+        </div>
+        <div class="line"></div>
+        <div class="circle-container">
+          <div class="circle">
+            <div class="circle2"></div>
+          </div>
+          <span class="progressbar-tags">Payment</span>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
