--- a/jackets.html
+++ b/jackets.html
@@ -13,7 +13,7 @@
 <body class="body__jackets">
   <header class="header__jackets">
     <h1>Jackets</h1>
-    <nav class="nav__jackets">
+    <nav class="nav__all">
       <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo logo"></a>
       <!-- <span class="pagetitle__jackets">Jackets</span> -->
       <a href="#" class="nav__symbols"><i class="fas fa-search"></i></a>
@@ -21,7 +21,7 @@
       <a href="#" class="nav__symbols"><i class="fas fa-bars"></i></a>
     </nav>
   </header>
-  <main class="main__jackets">
+  <main>
     <div class="grid-container__jackets">
       <a href="product.html"><img class="hex-img-large__jackets item1 hex-img" src="/images/photos/1.png" alt=""></a>
       <a href="product.html"><img class="hex-img-small__jackets item2 hex-img" src="/images/photos/2.png" alt=""></a>
