--- a/product.html
+++ b/product.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content=" The Calderon Rain Jacket is a design for active usage through differing temperatures making a versatile package as the outer shell, as well as with the zip out fleece, is wearable on its own.">
-  <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
-  <link rel="stylesheet" href="Css/styles.css">
-  <title>Calderon Jacket|RainyDays</title>
-</head>
-<body class="body__jackets">
-  <header class="header__jackets">
-    <h1>Calderon Jacket</h1>
-    <nav class="nav__jackets">
-      <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo logo"></a>
-      <a href="#" class="nav__symbols"><i class="fas fa-search"></i></a>
-      <a href="#" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
-      <a href="#" class="nav__symbols"><i class="fas fa-bars"></i></a>
-    </nav>
-  </header>
-  <main class="product__main">
-    <img src="/images/pexels-monicore-134068.jpg" alt="" class="background__img">
-    <div class="inserts__container">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content=" The Calderon Rain Jacket is a design for active usage through differing temperatures making a versatile package as the outer shell, as well as with the zip out fleece, is wearable on its own.">
+    <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
+    <link rel="stylesheet" href="Css/styles.css">
+    <title>Calderon Jacket|RainyDays</title>
+  </head>
+  <body class="body__jackets">
+    <header class="header__jackets">
+      <h1>Calderon Jacket</h1>
+      <nav class="nav__all">
+        <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo logo"></a>
+        <a href="#" class="nav__symbols"><i class="fas fa-search"></i></a>
+        <a href="#" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
+        <a href="#" class="nav__symbols"><i class="fas fa-bars"></i></a>
+      </nav>
+    </header>
+    <main class="product__main">
+      <img src="/images/pexels-monicore-134068.jpg" alt="" class="background__img">
+      <div class="inserts__container">
         <img src="/images/icons/Inserts.png" alt="inserts" class="inserts__product">
         <a href="#" class="button__product"><i class="fas fa-shopping-bag"></i>Add to bag</a>
-    </div>
-  </main>
-</body>
+      </div>
+    </main>
+  </body>
 </html>
