--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         </div>
         <div class="social-right">
           <ul class="social-icons">
-            <li class="social-link"><i class="fas fa-search"></i></li>
-            <li class="social-link"><i class="fab fa-twitter"></i></li>
-            <li class="social-link"><i class="fab fa-instagram"></i></li>
-            <li class="social-link"><i class="fab fa-facebook-f"></i></li>
+            <li class="social-link"><a href="#"><i class="fas fa-search"></i></a></li>
+            <li class="social-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            <li class="social-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            <li class="social-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
           </ul>
         </div>
       </section>
