Trying to fix product page

--- a/product.html
+++ b/product.html
@@ -21,9 +21,13 @@
       </nav>
     </header>
     <main class="product__main">
-      <img src="/images/pexels-monicore-134068.jpg" alt="" class="background__img">
+      <div>
+        <img src="/images/pexels-monicore-134068.jpg" alt="" class="background__img">
+      </div>
       <div class="inserts__container">
-        <img src="/images/icons/Inserts.png" alt="inserts" class="inserts__product">
+        <img src="/images/icons/Inserts.png" alt="inserts" class="inserts__png">
+      </div>
+      <div class="button__container">
         <a href="#" class="button__product"><i class="fas fa-shopping-bag"></i>Add to bag</a>
       </div>
     </main>
