More minor fixes and wrote alt descriptions

--- a/checkout.html
+++ b/checkout.html
@@ -23,8 +23,8 @@
     <main>
       <section class="checkout__container">
         <div class="images__checkout">
-          <img src="/images/photos/2.png" alt="" class="hex-img checkout__img">
-          <img src="/images/photos/6.png" alt="" class="hex-img checkout__img">
+          <img src="/images/photos/2.png" alt="Young Woman wearing a blue jacket and hiking gear walking on a snowy mountain top in the fog" class="hex-img checkout__img">
+          <img src="/images/photos/6.png" alt="Profile portrait view of a bearded man in a red rain jacket with a backpack in the woods" class="hex-img checkout__img">
         </div>
         <div class="total__checkout images__checkout">
           <h2>Total</h2>
