--- a/jackets.html
+++ b/jackets.html
@@ -22,14 +22,14 @@
   </header>
   <main>
     <div class="grid-container__jackets">
-      <a href="product.html"><img class="hex-img-large__jackets item1 hex-img" src="/images/photos/1.png" alt=""></a>
-      <a href="product.html"><img class="hex-img-small__jackets item2 hex-img" src="/images/photos/2.png" alt=""></a>
-      <a href="product.html"><img class="hex-img-small__jackets item3 hex-img" src="/images/photos/3.png" alt=""></a>
-      <a href="product.html"><img class="hex-img-large__jackets item4 hex-img" src="/images/photos/4.png" alt=""></a>
-      <a href="product.html"><img class="hex-img-large__jackets item5 hex-img" src="/images/photos/5.png" alt=""></a>
-      <a href="product.html"><img class="hex-img-small__jackets item6 hex-img" src="/images/photos/6.png" alt=""></a>
-      <a href="product.html"><img class="hex-img-small__jackets item7 hex-img" src="/images/photos/7.png" alt=""></a>
-      <a href="product.html"><img class="hex-img-large__jackets item8 hex-img" src="/images/photos/8.png" alt=""></a>
+      <a href="product.html"><img class="hex-img-large__jackets item1 hex-img" src="/images/photos/1.png" alt="Young woman in a yellow jacket standing on top of a cliff overviewing coastline looking towards the camera "></a>
+      <a href="product.html"><img class="hex-img-small__jackets item2 hex-img" src="/images/photos/2.png" alt="Young Woman wearing a blue jacket and hiking gear walking on a snowy mountain top in the fog"></a>
+      <a href="product.html"><img class="hex-img-small__jackets item3 hex-img" src="/images/photos/3.png" alt="Young woman in a white rain jacket in the woods in autumn facing camera"></a>
+      <a href="product.html"><img class="hex-img-large__jackets item4 hex-img" src="/images/photos/4.png" alt="Young woman wearing dark clothes standing on a cliff edge looking out to the fog"></a>
+      <a href="product.html"><img class="hex-img-large__jackets item5 hex-img" src="/images/photos/5.png" alt="Man with a yellow jacket and jeans standing in the middle of a road in the woods with his back turned to the camera"></a>
+      <a href="product.html"><img class="hex-img-small__jackets item6 hex-img" src="/images/photos/6.png" alt="Profile portrait view of a bearded man in a red rain jacket with a backpack in the woods"></a>
+      <a href="product.html"><img class="hex-img-small__jackets item7 hex-img" src="/images/photos/7.png" alt="Young woman in a yellow rain jacket holding reading glasses in the woods"></a>
+      <a href="product.html"><img class="hex-img-large__jackets item8 hex-img" src="/images/photos/8.png" alt="Man in a red jacket black pants and mountain shoes standing on a rock overlooking enormous waterfall"></a>
     </div>
     <div class="discount-tag">
       <span>%</span>
