--- a/product.html
+++ b/product.html
@@ -22,10 +22,10 @@
     </header>
     <main class="product__main">
       <div>
-        <img src="/images/pexels-monicore-134068.jpg" alt="" class="background__img">
+        <img src="/images/pexels-monicore-134068.jpg" alt="Young Woman wearing a blue jacket and hiking gear walking on a snowy mountain top" class="background__img">
       </div>
       <div class="inserts__container">
-        <img src="/images/icons/Inserts.png" alt="inserts" class="inserts__png">
+        <img src="/images/icons/Inserts.png" alt="jacket info graphics" class="inserts__png">
       </div>
       <div class="button__container">
         <a href="#" class="button__product"><i class="fas fa-shopping-bag"></i>Add to bag</a>
