--- a/about.html
+++ b/about.html
@@ -15,15 +15,14 @@
     <h1>About Us</h1>
     <nav class="nav__all">
       <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
-      <!-- <span class="pagetitle__jackets">Calderon</span> -->
       <a href="#" class="nav__symbols"><i class="fas fa-search"></i></a>
-      <a href="#" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
+      <a href="product.html" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
       <a href="#" class="nav__symbols"><i class="fas fa-bars"></i></a>
     </nav>
   </header>
   <main>
     <section class="top-section">
-      <img src="/images/photos/tim-jones-NQjvaCYp0h4-unsplash.jpg" alt="" class="background-about">
+      <img src="/images/photos/tim-jones-NQjvaCYp0h4-unsplash.jpg" alt="A birds eye view of a group of climbers going up a snowy mountain" class="background-about">
       <div class="text__about top-text__about">
         <p>
           No matter the weather
@@ -48,10 +47,10 @@
     </section>
     <section class="about-grid">
       <div class="about-grid-item">
-        <img src="/images/photos/blake-cheek-dw96lVwMXJg-unsplash.jpg" alt="" class="image-left">
+        <img src="/images/photos/blake-cheek-dw96lVwMXJg-unsplash.jpg" alt="Young person in a red rain-jacket sitting on a stone in front of a small creek with a waterfall in the background" class="image-left">
       </div>
       <div class="about-grid-item">
-        <img src="/images/photos/nina-luong-dy4QG5c5xWQ-unsplash.jpg" alt="" class="image-right">
+        <img src="/images/photos/nina-luong-dy4QG5c5xWQ-unsplash.jpg" alt="Two people in trekking gear standing on the edge of a cliff looking out towards the mountains in front" class="image-right">
       </div>
       <div class="about-grid-item about-grid-item-text1">
         <p>From the beginning, the brand committed to serving all those who desired to explore and to serving our natural wild lands by helping to conserve them. At our core, we believe exploration creates an indelible bond with the outdoors, inspiring people to protect our land and pass these beliefs down to the next generation.</p>
