--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <nav class="nav__all">
       <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
       <a href="#" class="nav__symbols"><i class="fas fa-search"></i></a>
-      <a href="product.html" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
+      <a href="checkout.html" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
       <a href="#" class="nav__symbols"><i class="fas fa-bars"></i></a>
     </nav>
   </header>
