--- a/product.html
+++ b/product.html
@@ -16,7 +16,7 @@
       <nav class="nav__all">
         <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo logo"></a>
         <a href="#" class="nav__symbols"><i class="fas fa-search"></i></a>
-        <a href="#" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
+        <a href="checkout.html" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
         <a href="#" class="nav__symbols"><i class="fas fa-bars"></i></a>
       </nav>
     </header>
@@ -28,7 +28,7 @@
         <img src="/images/icons/Inserts.png" alt="jacket info graphics" class="inserts__png">
       </div>
       <div class="button__container">
-        <a href="#" class="button__product"><i class="fas fa-shopping-bag"></i>Add to bag</a>
+        <a href="checkout.html" class="button__product"><i class="fas fa-shopping-bag"></i>Add to bag</a>
       </div>
     </main>
   </body>
