--- a/product.html
+++ b/product.html
@@ -8,6 +8,17 @@
     <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
     <link rel="stylesheet" href="Css/styles.css">
+    <!-- Hotjar Tracking Code for https://elegant-allen-d6e03e.netlify.app -->
+<script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:2968691,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
     <title>Calderon Jacket|RainyDays</title>
   </head>
   <body class="body__jackets">
