cleaned image folders and reconnected

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="header__home">
       <nav class="nav__home">
         <div>
-          <a href="index.html"><img src="/images/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
+          <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
         </div>
         <div>
           <label class="hamburger-label" for="check"><i class="fas fa-bars"></i></label>
@@ -41,7 +41,7 @@
     <main>
       <section class="home__main-container">
         <div class="text-left">
-          <img src="/images/rainydays_logo_text.png" alt="Rainy Days, Pushing the comfort zone" class="home__text">
+          <img src="/images/icons/rainydays_logo_text.png" alt="Rainy Days, Pushing the comfort zone" class="home__text">
           <a href="jackets.html" class="cta__home">Our Jackets</a>
         </div>
         <div class="social-right">
@@ -56,5 +56,6 @@
       <p class="licence">Photo by <a href="https://unsplash.com/@joshuaearle?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Joshua Earle</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
       </p>
     </main>
+    <script src="/js/main.js"></script>
   </body>
 </html>
