--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Css/styles.css">
     <!-- Hotjar Tracking Code for https://elegant-allen-d6e03e.netlify.app -->
 <script>
@@ -28,7 +29,23 @@
       <div>
         <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
       </div>
-      <nav class="nav__home">
+
+      <nav>
+        <div class="wrapper">
+          <div class="container">
+            <div class="menulogo"></div>
+            <div class="menulogo"></div>
+            <div class="menulogo"></div>
+          </div>
+        </div>
+        <ul class="menu">
+          <li><a href="#">shop</a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">contact</a></li>
+        </ul>
+      </nav>
+
+      <!-- <nav class="nav__home">
         <div>
           <label class="hamburger-label" for="check"><i class="fas fa-bars"></i></label>
           <input type="checkbox" id="check">
@@ -46,7 +63,7 @@
             <i class="closeIcon material-icons">close</i>
           </button>
         </div>
-      </nav>
+      </nav> -->
     </header>
     <main>
       <section class="home__main-container">
