fixing nav + responsiveness

--- a/index.html
+++ b/index.html
@@ -26,23 +26,26 @@
   </head>
   <body class="body__home"> 
     <header class="header__home">
-      <div>
-        <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
-      </div>
-
       <nav>
-        <div class="wrapper">
-          <div class="container">
-            <div class="menulogo"></div>
-            <div class="menulogo"></div>
-            <div class="menulogo"></div>
+        <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
+        <div class="list-box">
+          <ul class="nav-menu">
+            <li class="nav-link"><a href="product.html">shop</a></li>
+            <li class="nav-link"><a href="about.html">about</a></li>
+            <li class="nav-link"><a href="#">contact</a></li>
+          </ul>
+          <ul class="nav-menu">
+            <li class="search">search</li>
+            <li class="cart">cart</li>
+          </ul>
+        </div>
+        <div class="burger-container">
+          <div class="hamburger">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
           </div>
         </div>
-        <ul class="menu">
-          <li><a href="#">shop</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">contact</a></li>
-        </ul>
       </nav>
       
 
@@ -56,14 +59,7 @@
             <li><a class="navItem" href="#">Contact</a></li>
           </ul>
         </div>
-        <div>
-          <a href="#" class="search-bar">search</a>
-          <a href="#" class="cart">cart</a>
-          <button class="burger">
-            <i class="menuIcon material-icons">menu</i>
-            <i class="closeIcon material-icons">close</i>
-          </button>
-        </div>
+        
       </nav> -->
     </header>
     <main>
